--- a/index.html
+++ b/index.html
@@ -681,6 +681,106 @@
                     <div class="card-body">
                       <div class="accordion" id="accordionExample">
 
+                        <!-- 확진자 News 4 -->
+                        <div class="card">
+                          <div class="card-header" id="headingFour">
+                            <h2 class="mb-0 cases-title">
+                              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                                네번째 확진자 <span class="desc">(남, 46)</span>
+                              </button>
+                            </h2>
+                          </div>
+                          <div id="collapseFour" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div class="card-body">
+                              <!-- 4번째 확진자 -->
+                              <div class="cases-route-map">
+                                <p class="comments">※ 제주도가 카드 결제 정보를 통해 확인한 동선은 다음과 같다</p>
+                                <h4>2020.02.21(금)</h4>
+                                <dl>
+                                    <dt>18:07</dt>
+                                    <dd class="desc">
+                                        제스코마트 신제주점
+                                    </dd>
+                                </dl>
+                                <h4>2020.02.23(일)</h4>
+                                <dl>
+                                    <dt>11:24</dt>
+                                    <dd class="desc">
+                                        제주은행 신제주점
+                                        <p>ATM기를 이용</p>
+                                    </dd>
+                                    <dt>13:00</dt>
+                                <h4>2020.02.24(월)</h4>
+                                <dl>
+                                    <dt>21:58</dt>
+                                    <dd class="desc">
+                                        뉴월드마트 신제주점
+                                    </dd>
+                                </dl>
+                                <h4>2020.02.25(화)</h4>
+                                <dl>
+                                    <dt>13:50 ~ 14:11</dt>
+                                    <dd class="desc">
+                                        한라병원 선별진료소
+                                    </dd>
+                                </dl>
+                                <h4>2020.02.26(수)</h4>
+                                <dl>
+                                    <dt>--:--</dt>
+                                    <dd class="desc">
+                                        연동 소재 지인 B씨 집
+                                    </dd>
+                                </dl>
+                                <h4>2020.02.27(목)</h4>
+                                <dl>
+                                    <dt>17:15</dt>
+                                    <dd class="desc">
+                                        뉴월드마트 신제주점
+                                    </dd>
+                                </dl>
+                                <h4>2020.02.28(금)</h4>
+                                <dl>
+                                    <dt>14:16</dt>
+                                    <dd class="desc">
+                                        서브웨이 연동점
+                                    </dd>
+                                </dl>
+                                <h4>2020.02.29(토)</h4>
+                                <dl>
+                                    <dt>--:--</dt>
+                                    <dd class="desc">
+                                        연동 소재 지인 B씨 집에서 체류
+                                    </dd>
+                                </dl>
+                                <h4>2020.03.01(일)</h4>
+                                <dl>
+                                    <dt>18:49</dt>
+                                    <dd class="desc">
+                                        제스코마트 신제주점
+                                    </dd>
+                                </dl>
+                                <h4>2020.03.02(월)</h4>
+                                <dl>
+                                    <dt>--:--</dt>
+                                    <dd class="desc">
+                                        제스코마트 신제주점
+                                    </dd>
+                                </dl>
+                                <h4>2020.03.03(월)</h4>
+                                <dl>
+                                    <dt>17:00</dt>
+                                    <dd class="desc">
+                                        본인의 오토바이를 이용해 제주대병원 선별진료소를 방문해 코로나19 검체 검사
+                                    </dd>
+                                </dl>
+                              </div>
+                              <!-- //4번째 확진자 -->
+                              <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1234263">제주특별자치도</a></span></div>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- //확진자 News 4 -->
+
                         <!-- 확진자 News 3 -->
                         <div class="card">
                           <div class="card-header" id="headingFour">
