--- a/index.html
+++ b/index.html
@@ -643,8 +643,10 @@
 
                     <div class="card-body">
                       <div id="jejuMedicineMap" style="width:100%;height:35rem;"></div>
-                      <p>* 우체국은 1인 5매 제한(전화해보시고 가시는 것이 좋습니다.)</p>
-                      <p>* 타 정보는 업데이트 중에 있습니다.</p>
+                      <ul>
+                        <li>우체국은 1인 5매 제한(전화해보시고 가시는 것이 좋습니다.)</li>
+                        <li>타 정보는 업데이트 중에 있습니다.</li>
+                      </ul>
                     </div>
                   </div>
                 </div>
