--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta property="og:type" content="website">
   <meta property="og:title" content="코로나19 바이러스 현황판">
-  <meta name="description" content="질병관리본부의 데이터에 근거하여 코로나19 바이러스 감염증에 대한 정보, 안내 및 확산 지도를 신속하게 전달합니다.">
+  <meta name="description" content="질병관리본부의 데이터에 근거하여 코로나19 바이러스 감염증에 대한 정보, 안내, 현황 및 확산 지도를 신속하게 전달합니다.">
   <meta name="keywords" content="코로나19, 코로나바이러스, 코로나, 코로나맵, 코로나지도, 코로나 지도, 코로나 현황판, 확진자" />
   <meta property="og:description" content="코로나19 바이러스 현황판">
   <meta property="og:image" content="https://livecorona.co.kr/img/livecorona.jpg">
@@ -1080,7 +1080,7 @@
                         <!-- //확진자 News 1 -->
 
                       </div>
-                      <a class="btn btn-primary" target="_blank" style="margin:1rem;" href="http://ncov.mohw.go.kr/bdBoardList_Real.do?brdId=1&brdGubun=12&ncvContSeq=&contSeq=&board_id=&gubun=" role="button">질병관리 본부의 전국 확진자 이동동선</a>
+                      <a class="btn btn-primary" target="_blank" style="margin:1rem;" href="http://ncov.mohw.go.kr/bdBoardList_Real.do?brdId=1&brdGubun=12&ncvContSeq=&contSeq=&board_id=&gubun=" role="button">질병관리본부의 전국 확진자 이동동선</a>
                     </div>
                   </div>
                 </div>
