--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
                           <div class="card-header" id="headingOne">
                             <h2 class="mb-0 cases-title">
                               <button class="btn btn-link text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                첫번째 확진자 <span class="desc">(휴가차 고향인 대구에 다녀왔다가 코로나19 양성 판정을 받은 군인의 동선)</span>
+                                첫번째 확진자 <span class="desc">(휴가차 대구에 다녀온 군인)</span>
                               </button>
                             </h2>
                           </div>
