--- a/index.html
+++ b/index.html
@@ -438,10 +438,6 @@
                   <a href="img/safe_1.png" class="block" target="_blank"><img src="img/safe_1.png" alt="Safe rule1" /></a>
                   <a href="img/safe_2.png" class="block" target="_blank"><img src="img/safe_2.png" alt="Safe rule2" /></a>
                   <a href="img/safe_3.png" class="block" target="_blank"><img src="img/safe_3.png" alt="Safe rule3" /></a>
-                  <ul>
-                    <li><a target="_blank" href="http://www.cdc.go.kr/contents.es?mid=a21111060000">질병관리본부 안전수칙</a></li>
-                    <li><a target="_blank" href="https://www.cdc.go.kr/linkCheck.es?mid=a21111050600">코로나19 바이러스 선별진료소</a></li>
-                  </ul>
                   <a target="_blank" class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://www.notion.so/a80c76132f8b4a63a6f4901b1320bf62" role="button">자기동선기록 가이드</a>
                   <a target="_blank" class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://news.naver.com/main/factcheck/main.nhn" role="button">코로나19 바이러스 관련 팩트체크</a>
                   <a target="_blank" class="btn btn-primary" style="width:100%" href="https://www.notion.so/381a1f09e420476c839cdbe543dbb3bb" role="button">소상공인 지원사업</a>
@@ -1168,6 +1164,7 @@
                     <li><strong>국민안심병원</strong> : 호흡기 환자의 병원 방문부터 입원까지 전 진료 과정을 나머지 환자들과 분리해 진료하는 의료기관, 코로나19에 대한 국민 불안을 줄이고, 비호흡기 환자들이 코로나19 감염에 대한 걱정 없이 진료를 받을 수 있도록 마련</li>
                   </ul>
                   <p style="margin-top:1rem">
+                    <a target="_blank" class="btn btn-primary" href="http://www.mohw.go.kr/react/popup_200128.html" role="button">코로나19 선별진료소 및 안심병원</a>
                     <button type="button" class="btn btn-primary" data-toggle="modal" onclick="location.href='https://jeju.livecorona.co.kr'">자세한 지도 확인</button>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#jejuHealthCenter">제주 보건지소현황</button>
                     <!-- Modal -->
