--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                   <a href="img/safe_1.png" class="block" target="_blank"><img src="img/safe_1.png" alt="Safe rule1" /></a>
                   <a href="img/safe_2.png" class="block" target="_blank"><img src="img/safe_2.png" alt="Safe rule2" /></a>
                   <a href="img/safe_3.png" class="block" target="_blank"><img src="img/safe_3.png" alt="Safe rule3" /></a>
-                  <a target="_blank" class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://www.notion.so/a80c76132f8b4a63a6f4901b1320bf62" role="button">자기동선기록 가이드</a>
+                  <a target="_blank" class="btn btn-primary" style="width:100%;margin-bottom:1rem;margin-top:1rem;" href="https://www.notion.so/a80c76132f8b4a63a6f4901b1320bf62" role="button">자기동선기록 가이드</a>
                   <a target="_blank" class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://news.naver.com/main/factcheck/main.nhn" role="button">코로나19 바이러스 관련 팩트체크</a>
                   <a target="_blank" class="btn btn-primary" style="width:100%" href="https://www.notion.so/381a1f09e420476c839cdbe543dbb3bb" role="button">소상공인 지원사업</a>
                 </div>
