--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,7 @@
                     <li><strong>국민안심병원</strong> : 호흡기 환자의 병원 방문부터 입원까지 전 진료 과정을 나머지 환자들과 분리해 진료하는 의료기관, 코로나19에 대한 국민 불안을 줄이고, 비호흡기 환자들이 코로나19 감염에 대한 걱정 없이 진료를 받을 수 있도록 마련</li>
                   </ul>
                   <p style="margin-top:1rem">
-                    <a target="_blank" class="btn btn-primary" href="http://www.mohw.go.kr/react/popup_200128.html" role="button">코로나19 선별진료소 및 안심병원</a>
+                    <a target="_blank" class="btn btn-primary" href="http://www.mohw.go.kr/react/popup_200128.html" role="button">코로나19 선별진료소 및 안심병원(전국)</a>
                     <button type="button" class="btn btn-primary" data-toggle="modal" onclick="location.href='https://jeju.livecorona.co.kr'">자세한 지도 확인</button>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#jejuHealthCenter">제주 보건지소현황</button>
                     <!-- Modal -->
