Fix wrong accordion toggle id

--- a/index.html
+++ b/index.html
@@ -783,12 +783,12 @@
                         <div class="card">
                           <div class="card-header" id="headingFour">
                             <h2 class="mb-0 cases-title">
-                              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseFour">
                                 세번째 확진자 <span class="desc">(대구 거주 후 입도한 A씨)</span>
                               </button>
                             </h2>
                           </div>
-                          <div id="collapseFour" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
+                          <div id="collapseThree" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
                             <div class="card-body">
                               <!-- 3번째 확진자 -->
                               <div class="cases-route-map">
