--- a/semi-log.html
+++ b/semi-log.html
@@ -278,7 +278,7 @@
                     <canvas id="myAreaChart_four"></canvas>
                   </div>
 
-                  <div class="tab-pane fade" id="korea_semi_log_chart" role="tabpanel">
+                  <div class="tab-pane fade" id="korea_semi_log_chart" role="tabpanel" style="height:35rem;">
                     <canvas id="myAreaChart_six"></canvas>
                   </div>
                 </div>
