아이돌봄 업데이트

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <a href="#worldCasesStatus"><i class="fas fa-caret-right"></i> 세계 현황</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#safetyRule"><i class="fas fa-caret-right"></i> 안전수칙, 팩트체크 및 소상공인 지원사업</a>
+                  <a href="#safetyRule"><i class="fas fa-caret-right"></i> 안전수칙, 팩트체크, 소상공인 지원사업, 아이돌봄 지원사업</a>
                 </li>
                 <li class="nav-item">
                   <a href="#jejuMedicine"><i class="fas fa-caret-right"></i> 제주도 마스크, 손세정제 구입처</a>
@@ -113,7 +113,7 @@
             <a href="#worldCasesStatus"><i class="fas fa-caret-right"></i> 세계 현황</a>
           </li>
           <li>
-            <a href="#safetyRule"><i class="fas fa-caret-right"></i> 안전수칙, 팩트체크 및 소상공인 지원사업</a>
+            <a href="#safetyRule"><i class="fas fa-caret-right"></i> 안전수칙, 팩트체크, 소상공인 지원사업, 아이돌봄 지원사업</a>
           </li>
           <li class="nav-item">
             <a href="#jejuMedicine"><i class="fas fa-caret-right"></i> 제주도 마스크, 손세정제 구입처</a>
@@ -356,7 +356,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">안전수칙, 팩트체크 및 소상공인 지원사업</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">안전수칙, 팩트체크, 소상공인 지원사업, 아이돌봄 지원사업</h6>
                   <div class="right"><a class="new_window" href="http://www.cdc.go.kr/contents.es?mid=a21111060000" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                 </div>
                 <!-- Card Body -->
@@ -367,6 +367,7 @@
                   <a target="_blank" class="btn btn-primary" style="width:100%;margin-bottom:1rem;margin-top:1rem;" href="https://www.notion.so/a80c76132f8b4a63a6f4901b1320bf62" role="button">자기동선기록 가이드</a>
                   <a target="_blank" class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://news.naver.com/main/factcheck/main.nhn" role="button">코로나19 바이러스 관련 팩트체크</a>
                   <a target="_blank" class="btn btn-primary" style="width:100%" href="https://www.notion.so/381a1f09e420476c839cdbe543dbb3bb" role="button">소상공인 지원사업</a>
+                  <a target="_blank" class="btn btn-primary" style="width:100%" href="https://neighbor-house.tistory.com/148" role="button">아이돌봄 지원사업</a>
                 </div>
               </div>
             </div>
@@ -511,7 +512,7 @@
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                       <h6 class="m-0 font-weight-bold text-danger">한국과 세계 확진자 확진자 증가율 그래프</h6>
-                      <!-- <div class="right"><a class="new_window" href="#" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div> 
+                      <!-- <div class="right"><a class="new_window" href="#" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                       <div class="dropdown no-arrow">
                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
