--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               <div class="card shadow mb-4 height-2">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">국내 확진자 누적 현황(중앙방역대책본부, KBS)</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">국내 확진자 누적 현황</h6>
                   <div class="right"><a class="new_window" href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                 </div>
                 <!-- Card Body -->
